st 04 - Value error

--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -10,6 +10,13 @@ artifacts:
   FEATURIZED_OUT_TEST: test.pkl
   MODEL_DIR: model
   MODEL_NAME: model.pkl
+
+metrics:
+  SCORES: scores.json
+
+plots:
+  PRC: prc.json
+  ROC: roc.json
   
 
 source_data: 
