--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -8,19 +8,34 @@ on: [push]
 
 # what jobs we want to run
 jobs:
-  run:
-    runs-on: [ubuntu-latest] # here we will specify the machine type
+  deploy-runner: # adding runner to run on AWS Cloud EC2 instance
+  steps:
+    - uses: iterative/setup-cml@v1 # iterative is the company behind dvc
+    - uses: actions/checkout@v2
+    - name: "Deploy runner in EC2"
+      shell: bash
+      env:
+        REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      run: |
+        cml-runner \
+        --cloud aws \
+        --cloud-region us-west \
+        --cloud-type=t2.micro \
+        --labels=cml-runner
+
+
+  model-training:
+    needs: deploy-runner # here we will specify the machine type
+    runs-on: [self-hosted, cml-runner]
+    container: docker://iterative/cml:0-dvc2-base1
     steps:
       - uses: actions/checkout@v2
-      - uses: iterative/setup-cml@v1 # iterative is the company behind dvc
-      - uses: actions/setup-python@v2
-        with:
-          python-version: '3.7'
-
       # specify the stages which we want to run
-      - name: cml_run
+      - name: "Train my model"
         env:
-          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          repo_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
         run: | # specify the series of steps which we want to run
           # Your ML workflow commands
           pip install --upgrade pip
@@ -31,7 +46,6 @@ jobs:
           echo "# REPORTS" >> report.md
           echo "##  metrics" >> report.md
           cat scores.json >> report.md
-
           cml-send-comment report.md ## >> CML COMMAND USE TO COMMENT ON LAST COMMIT
-          
+
 
