--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -9,21 +9,22 @@ on: [push]
 # what jobs we want to run
 jobs:
   deploy-runner: # adding runner to run on AWS Cloud EC2 instance
-  steps:
-    - uses: iterative/setup-cml@v1 # iterative is the company behind dvc
-    - uses: actions/checkout@v2
-    - name: "Deploy runner in EC2"
-      shell: bash
-      env:
-        REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-      run: |
-        cml-runner \
-        --cloud aws \
-        --cloud-region us-west \
-        --cloud-type=t2.micro \
-        --labels=cml-runner
+    runs-on: [ubuntu-latest]
+    steps:
+      - uses: iterative/setup-cml@v1 # iterative is the company behind dvc
+      - uses: actions/checkout@v2
+      - name: "Deploy runner in EC2"
+        shell: bash
+        env:
+          REPO_TOKEN: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          cml-runner \
+          --cloud aws \
+          --cloud-region us-west \
+          --cloud-type=t2.micro \
+          --labels=cml-runner
 
 
   model-training:
